--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "express": "^4.19.2"
   }
 }
